--- a/integration/docker-compose.yml
+++ b/integration/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   generator:
-    image: andrewc2020/gen:ci30
+    image: andrewc2020/gen:ci${GENERATOR_BUILD_NUMBER-31}
     #ports:
       #- "8080:80"
   mail:
@@ -11,8 +11,10 @@ services:
      # - "8025:8025"
 
   integration:
-    image: andrewc2020/gen:integration-30
+    image: andrewc2020/gen:integration-${BUILD_NUMBER-5}
     build: .
+    environment:
+          TEAMCITY_PROJECT_NAME: null
 
 
   
