--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     image: aspnetcore/generator:multi
     ports:
       - "8080:80"
+    environment:
+          TEAMCITY_PROJECT_NAME: null
+
   mail:
     image: mailhog/mailhog
     ports:
