added yaml for prod

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     image: aspnetcore/generator:multi
     ports:
       - "8080:80"
-    environment:
+    kenvironment:
           TEAMCITY_PROJECT_NAME: null
 
   mail:
