--- a/prod/gen.yaml
+++ b/prod/gen.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: generator
-        image: andrewc2020/gen:c${GENERATOR_BUILD_NUMBER-37}
+        image: andrewc2020/gen:ci47
         resources:
           requests:
             cpu: 100m
